--- a/style.css
+++ b/style.css
@@ -660,14 +660,14 @@ body{
 .invHintHome{
   position: absolute;
   left: 50%;
-  bottom: 14px;
+  top: 16px;                 /* 👈 arriba */
   transform: translateX(-50%);
 
   padding: 10px 14px;
   border-radius: 999px;
 
   font-family: "Parisienne", cursive;
-  font-size: 14px;
+  font-size: 18px;
   color: rgba(0,0,0,.55);
 
   background: rgba(255,255,255,.65);
